--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(seccam)
 include(Sources.cmake)
+add_subdirectory(video)
+add_definitions(-D__STDC_CONSTANT_MACROS)
 add_executable(${PROJECT_NAME} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} video)
