--- a/video/CMakeLists.txt
+++ b/video/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 project(video)
 include(Sources.cmake)
+include_directories(${CMAKE_SOURCE_DIR})
 add_library(${PROJECT_NAME} ${SOURCES})
 target_link_libraries(${PROJECT_NAME} avformat avdevice avcodec avutil swscale)
