--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 project(seccam)
 include(Sources.cmake)
 
+add_subdirectory(logging)
 add_subdirectory(common)
 add_subdirectory(video)
 add_subdirectory(net)
@@ -12,6 +13,7 @@ add_definitions(-D__STDC_CONSTANT_MACROS)
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME} 
+    logging
     video
     net
     common
